# uta-wbc-dreamer

./: README.md  index.html  params.json
wbc_core/: CMakeLists.txt  Makefile  manifest.xml
wbc_core/src/: checkXML.cpp
wbc_m3_ctrl/: CMakeLists.txt  Makefile
wbc_m3_ctrl/IROS/: hello_byebye.yaml  jointspace.yaml  opspace_circle.yaml  opspace_dirnogain.yaml  opspace_holdpos.yaml  reach.yaml
wbc_m3_ctrl/arm_config/: forceposition.yaml  generic.yaml  gesture2.yaml  m3_with_hand.xml  photo.yaml  purepostest.yaml  testsphere.yaml
wbc_m3_ctrl/base_config/: gravity.yaml  gravity_jpos.yaml  gravity_test.yaml  holdpos.yaml  jointpos.yaml  multipos.yaml  opspace_task.yaml  orientation.yaml  pos_ori.yaml  trikey.xml  wh_task.yaml  wh_vel_task.yaml
wbc_m3_ctrl/config/: dynamicaccuracy.yaml  gesture.yaml  hello_byebye.yaml  jointtest.yaml  letter_database.yaml  multi_letter_test.yaml  purepostest.yaml  staticaccuracy.yaml  taskposture.yaml  testvargain.yaml  trajaccuracy.yaml
wbc_m3_ctrl/full_config/: COM.yaml  COMexperiment.yaml  COMnewPos.yaml  dreamer.xml  follow.yaml  followFullPosture.yaml  jointpos.yaml  newposture.yaml  opspace_posture.yaml  opspace_task.yaml
wbc_m3_ctrl/src/: arm_head_servo.cpp  rt_util.cpp  rt_util_base.cpp  rt_util_dual.cpp  rt_util_full.cpp  rt_util_wh.cpp  (+7 more)
wbc_test_ctrl/: CMakeLists.txt  manifest.xml
wbc_test_ctrl/include/wbc_test_ctrl/: test_util_base.h
wbc_test_ctrl/src/: comm_udp.c  comm_udp.h  servo_base.cpp  test_util_base.cpp
wbc_test_ctrl/test_config/: trikey_2013.xml
wbc_uta_opspace/: CMakeLists.txt  Makefile  manifest.xml
(+90 files in other folders)
